methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:3: error: ';' expected but ',' found.
    left() , forward(),brushDown(),brushUp(),backward()
           ^PictureMono1:4: error: ';' expected but ',' found.
    right , forward(),brushDown(),brushUp(),backward()
          ^PictureMono1:5: error: ';' expected but ',' found.
    forward(),brushDown(),brushUp(),backward()
             ^