methods.picture.PictureMono1.scala.code
override def run() {
  def makeV() {
    left() , forward(),brushDown(),brushUp(),backward()
    right , forward(),brushDown(),brushUp(),backward()
    forward(),brushDown(),brushUp(),backward()
  }
  
}